// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Profile screen — RTL snapshots > LTR snapshot (lang=en) 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f5f5f5",
      },
    ]
  }
>
  <View
    contentContainerStyle={
      {
        "paddingBottom": 32,
      }
    }
    onScroll={[Function]}
    scrollEventThrottle={16}
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            },
            false,
            {
              "paddingBottom": 12,
              "paddingTop": 8,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="header"
            style={
              [
                {
                  "fontFamily": "PublicSans-Bold",
                  "fontSize": 30,
                },
                {
                  "color": "#141c28",
                  "textAlign": "left",
                },
                false,
              ]
            }
          >
            tabs.profile
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 16,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "gap": 12,
              "marginBottom": 16,
              "padding": 16,
            },
            false,
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Sara Ahmadi"
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "borderRadius": 30,
                "height": 60,
                "width": 60,
              },
              {
                "backgroundColor": "#2e9e71",
              },
            ]
          }
          testID="profile-avatar"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "PublicSans-Bold",
                },
                {
                  "color": "#ffffff",
                  "fontSize": 22.8,
                },
                false,
              ]
            }
          >
            SA
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "gap": 8,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "PublicSans-Bold",
                  "fontSize": 20,
                },
                {
                  "color": "#111",
                },
                {
                  "textAlign": "left",
                },
              ]
            }
            testID="profile-name"
          >
            Sara Ahmadi
          </Text>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "gap": 8,
                },
                false,
              ]
            }
          >
            <Pressable
              accessibilityRole="button"
              accessibilityState={
                {
                  "selected": false,
                }
              }
              style={
                [
                  {
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "paddingHorizontal": 12,
                    "paddingVertical": 8,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d8dde6",
                  },
                ]
              }
              testID="profile-account-type"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Manrope",
                      "fontSize": 14,
                    },
                    {
                      "color": "#4a5568",
                    },
                    false,
                    false,
                  ]
                }
              >
                profile.patient
              </Text>
            </Pressable>
            <Pressable
              accessibilityRole="button"
              accessibilityState={
                {
                  "selected": false,
                }
              }
              style={
                [
                  {
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "paddingHorizontal": 12,
                    "paddingVertical": 8,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d8dde6",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Manrope",
                      "fontSize": 14,
                    },
                    {
                      "color": "#4a5568",
                    },
                    false,
                    false,
                  ]
                }
              >
                profile.premium
              </Text>
            </Pressable>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 8,
                "marginHorizontal": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#838e9d",
                "textAlign": "left",
              },
            ]
          }
        >
          profile.accountType
        </Text>
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 1,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#eef1f5",
              },
              false,
            ]
          }
        >
          <View>
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.phone
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  +93700000000
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 1,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#eef1f5",
              },
              false,
            ]
          }
        >
          <View>
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.gender
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  female
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.age
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  36
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.bloodGroup
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  O+
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.currentAddress
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  Kabul 1, Kabul
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.preferredLanguage
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  prs
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#666",
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          profile.preferences
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Medium",
                "fontSize": 12,
                "marginBottom": 4,
              },
              {
                "color": "#666",
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          profile.language
        </Text>
        <View
          accessibilityRole="radiogroup"
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "gap": 8,
              },
              false,
            ]
          }
        >
          <Pressable
            accessibilityLabel="EN"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": true,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                {
                  "backgroundColor": "#2e9e71",
                  "borderColor": "#2e9e71",
                },
              ]
            }
            testID="lang-btn-en"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  {
                    "color": "#fff",
                    "fontFamily": "Manrope-SemiBold",
                  },
                  false,
                ]
              }
            >
              EN
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="دری"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="lang-btn-prs"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              دری
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="پښتو"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="lang-btn-ps"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              پښتو
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="عربي"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="lang-btn-ar"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              عربي
            </Text>
          </Pressable>
        </View>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Medium",
                "fontSize": 12,
                "marginBottom": 4,
              },
              {
                "color": "#666",
                "marginTop": 12,
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          profile.appearance
        </Text>
        <View
          accessibilityRole="radiogroup"
          style={
            [
              {
                "flexDirection": "row",
                "gap": 8,
              },
              false,
            ]
          }
        >
          <Pressable
            accessibilityLabel="profile.themeLight"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": true,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flex": 1,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                {
                  "backgroundColor": "#2e9e71",
                  "borderColor": "#2e9e71",
                },
              ]
            }
            testID="theme-light"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  {
                    "color": "#fff",
                  },
                  false,
                ]
              }
            >
              profile.themeLight
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.themeDark"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flex": 1,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="theme-dark"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  false,
                ]
              }
            >
              profile.themeDark
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.themeSystem"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flex": 1,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="theme-system"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  false,
                ]
              }
            >
              profile.themeSystem
            </Text>
          </Pressable>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#666",
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          profile.alertsSection
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Medium",
                "fontSize": 12,
                "marginBottom": 4,
              },
              {
                "color": "#666",
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          profile.alertReappearLabel
        </Text>
        <View
          accessibilityRole="radiogroup"
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "gap": 8,
              },
              false,
            ]
          }
        >
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-15"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  false,
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": true,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                {
                  "backgroundColor": "#2e9e71",
                  "borderColor": "#2e9e71",
                },
              ]
            }
            testID="alert-reappear-30"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  {
                    "color": "#fff",
                    "fontFamily": "Manrope-SemiBold",
                  },
                  false,
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-60"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  false,
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-90"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  false,
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearNever"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-never"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  false,
                ]
              }
            >
              profile.alertReappearNever
            </Text>
          </Pressable>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#666",
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          profile.catalogSync
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope",
                "fontSize": 16,
              },
              {
                "color": "#666",
              },
              {
                "textAlign": "left",
              },
            ]
          }
          testID="last-synced-text"
        >
          profile.neverSynced
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope",
                "fontSize": 16,
              },
              {
                "color": "#666",
              },
              {
                "textAlign": "left",
              },
            ]
          }
        >
          profile.version
        </Text>
        <Pressable
          accessibilityLabel="profile.syncNow"
          accessibilityRole="button"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          disabled={false}
          onClick={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "marginTop": 8,
                "padding": 12,
              },
              {
                "backgroundColor": "#2e9e71",
              },
              false,
            ]
          }
          testID="sync-now-button"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Manrope-SemiBold",
                  "fontSize": 16,
                },
                {
                  "color": "#fff",
                },
                false,
              ]
            }
          >
            profile.syncNow
          </Text>
        </Pressable>
        <Pressable
          accessibilityLabel="profile.showTips"
          accessibilityRole="button"
          onClick={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "marginTop": 8,
              },
            ]
          }
          testID="show-tips-button"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Manrope-Medium",
                  "fontSize": 14,
                },
                {
                  "color": "#2e9e71",
                },
                false,
              ]
            }
          >
            profile.showTips
          </Text>
        </Pressable>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Pressable
          accessibilityLabel="profile.logout"
          accessibilityRole="button"
          onClick={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "marginTop": 8,
                "padding": 12,
              },
              {
                "backgroundColor": "#fee2e2",
              },
            ]
          }
          testID="logout-button"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Manrope-SemiBold",
                  "fontSize": 16,
                },
                {
                  "color": "#991b1b",
                },
                false,
              ]
            }
          >
            profile.logout
          </Text>
        </Pressable>
      </View>
    </View>
  </View>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderBottomWidth": 1,
          "height": 52,
          "justifyContent": "center",
          "left": 0,
          "paddingHorizontal": 16,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#ffffff",
          "borderBottomColor": "#eef1f5",
          "opacity": Value {
            "_value": 0,
          },
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Manrope-Bold",
            "fontSize": 16,
          },
          {
            "color": "#141c28",
            "textAlign": "left",
          },
          false,
        ]
      }
    >
      tabs.profile
    </Text>
  </View>
</SafeAreaView>
`;

exports[`Profile screen — RTL snapshots > RTL snapshot (lang=ar) 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f5f5f5",
      },
    ]
  }
>
  <View
    contentContainerStyle={
      {
        "paddingBottom": 32,
      }
    }
    onScroll={[Function]}
    scrollEventThrottle={16}
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            },
            false,
            {
              "paddingBottom": 12,
              "paddingTop": 8,
            },
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="header"
            style={
              [
                {
                  "fontFamily": "PublicSans-Bold",
                  "fontSize": 30,
                },
                {
                  "color": "#141c28",
                  "textAlign": "left",
                },
                false,
              ]
            }
          >
            tabs.profile
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 16,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "gap": 12,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "flexDirection": "row-reverse",
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Sara Ahmadi"
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "borderRadius": 30,
                "height": 60,
                "width": 60,
              },
              {
                "backgroundColor": "#2e9e71",
              },
            ]
          }
          testID="profile-avatar"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "PublicSans-Bold",
                },
                {
                  "color": "#ffffff",
                  "fontSize": 22.8,
                },
                false,
              ]
            }
          >
            SA
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "gap": 8,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "PublicSans-Bold",
                  "fontSize": 20,
                },
                {
                  "color": "#111",
                },
                {
                  "fontFamily": "NotoKufiArabic",
                  "textAlign": "right",
                },
              ]
            }
            testID="profile-name"
          >
            Sara Ahmadi
          </Text>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "gap": 8,
                },
                {
                  "flexDirection": "row-reverse",
                },
              ]
            }
          >
            <Pressable
              accessibilityRole="button"
              accessibilityState={
                {
                  "selected": false,
                }
              }
              style={
                [
                  {
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "paddingHorizontal": 12,
                    "paddingVertical": 8,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d8dde6",
                  },
                ]
              }
              testID="profile-account-type"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Manrope",
                      "fontSize": 14,
                    },
                    {
                      "color": "#4a5568",
                    },
                    false,
                    false,
                  ]
                }
              >
                profile.patient
              </Text>
            </Pressable>
            <Pressable
              accessibilityRole="button"
              accessibilityState={
                {
                  "selected": false,
                }
              }
              style={
                [
                  {
                    "borderRadius": 9999,
                    "borderWidth": 1,
                    "paddingHorizontal": 12,
                    "paddingVertical": 8,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#d8dde6",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Manrope",
                      "fontSize": 14,
                    },
                    {
                      "color": "#4a5568",
                    },
                    false,
                    false,
                  ]
                }
              >
                profile.premium
              </Text>
            </Pressable>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 8,
                "marginHorizontal": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#838e9d",
                "textAlign": "left",
              },
            ]
          }
        >
          profile.accountType
        </Text>
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 1,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#eef1f5",
              },
              false,
            ]
          }
        >
          <View>
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.phone
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  +93700000000
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 1,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#eef1f5",
              },
              false,
            ]
          }
        >
          <View>
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.gender
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  female
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.age
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  36
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.bloodGroup
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  O+
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.currentAddress
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  Kabul 1, Kabul
                </Text>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "height": 1,
                  },
                  {
                    "backgroundColor": "#eef1f5",
                  },
                ]
              }
              testID="card-divider"
            />
            <View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 12,
                      "minHeight": 48,
                      "paddingHorizontal": 16,
                      "paddingVertical": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flex": 1,
                        "fontFamily": "Manrope-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#141c28",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  profile.preferredLanguage
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "fontFamily": "Manrope",
                        "fontSize": 14,
                      },
                      {
                        "color": "#838e9d",
                        "textAlign": "left",
                      },
                      false,
                    ]
                  }
                >
                  prs
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#666",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
        >
          profile.preferences
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Medium",
                "fontSize": 12,
                "marginBottom": 4,
              },
              {
                "color": "#666",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
        >
          profile.language
        </Text>
        <View
          accessibilityRole="radiogroup"
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "gap": 8,
              },
              {
                "flexDirection": "row-reverse",
              },
            ]
          }
        >
          <Pressable
            accessibilityLabel="EN"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="lang-btn-en"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  false,
                ]
              }
            >
              EN
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="دری"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="lang-btn-prs"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              دری
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="پښتو"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="lang-btn-ps"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              پښتو
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="عربي"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": true,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                {
                  "backgroundColor": "#2e9e71",
                  "borderColor": "#2e9e71",
                },
              ]
            }
            testID="lang-btn-ar"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  {
                    "color": "#fff",
                    "fontFamily": "Manrope-SemiBold",
                  },
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              عربي
            </Text>
          </Pressable>
        </View>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Medium",
                "fontSize": 12,
                "marginBottom": 4,
              },
              {
                "color": "#666",
                "marginTop": 12,
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
        >
          profile.appearance
        </Text>
        <View
          accessibilityRole="radiogroup"
          style={
            [
              {
                "flexDirection": "row",
                "gap": 8,
              },
              {
                "flexDirection": "row-reverse",
              },
            ]
          }
        >
          <Pressable
            accessibilityLabel="profile.themeLight"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": true,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flex": 1,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                {
                  "backgroundColor": "#2e9e71",
                  "borderColor": "#2e9e71",
                },
              ]
            }
            testID="theme-light"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  {
                    "color": "#fff",
                  },
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.themeLight
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.themeDark"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flex": 1,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="theme-dark"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.themeDark
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.themeSystem"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flex": 1,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="theme-system"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.themeSystem
            </Text>
          </Pressable>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#666",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
        >
          profile.alertsSection
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Medium",
                "fontSize": 12,
                "marginBottom": 4,
              },
              {
                "color": "#666",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
        >
          profile.alertReappearLabel
        </Text>
        <View
          accessibilityRole="radiogroup"
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "gap": 8,
              },
              {
                "flexDirection": "row-reverse",
              },
            ]
          }
        >
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-15"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": true,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                {
                  "backgroundColor": "#2e9e71",
                  "borderColor": "#2e9e71",
                },
              ]
            }
            testID="alert-reappear-30"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  {
                    "color": "#fff",
                    "fontFamily": "Manrope-SemiBold",
                  },
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-60"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearDays"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-90"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.alertReappearDays
            </Text>
          </Pressable>
          <Pressable
            accessibilityLabel="profile.alertReappearNever"
            accessibilityRole="radio"
            accessibilityState={
              {
                "selected": false,
              }
            }
            onClick={[Function]}
            style={
              [
                {
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                {
                  "borderColor": "#e5e5e5",
                },
                false,
              ]
            }
            testID="alert-reappear-never"
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "Manrope-Medium",
                    "fontSize": 14,
                  },
                  {
                    "color": "#666",
                  },
                  false,
                  {
                    "fontFamily": "NotoKufiArabic",
                  },
                ]
              }
            >
              profile.alertReappearNever
            </Text>
          </Pressable>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Manrope-Bold",
                "fontSize": 12,
                "letterSpacing": 0.5,
                "marginBottom": 4,
                "textTransform": "uppercase",
              },
              {
                "color": "#666",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
        >
          profile.catalogSync
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope",
                "fontSize": 16,
              },
              {
                "color": "#666",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
          testID="last-synced-text"
        >
          profile.neverSynced
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "Manrope",
                "fontSize": 16,
              },
              {
                "color": "#666",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
              },
            ]
          }
        >
          profile.version
        </Text>
        <Pressable
          accessibilityLabel="profile.syncNow"
          accessibilityRole="button"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          disabled={false}
          onClick={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "marginTop": 8,
                "padding": 12,
              },
              {
                "backgroundColor": "#2e9e71",
              },
              false,
            ]
          }
          testID="sync-now-button"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Manrope-SemiBold",
                  "fontSize": 16,
                },
                {
                  "color": "#fff",
                },
                {
                  "fontFamily": "NotoKufiArabic",
                },
              ]
            }
          >
            profile.syncNow
          </Text>
        </Pressable>
        <Pressable
          accessibilityLabel="profile.showTips"
          accessibilityRole="button"
          onClick={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "marginTop": 8,
              },
            ]
          }
          testID="show-tips-button"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Manrope-Medium",
                  "fontSize": 14,
                },
                {
                  "color": "#2e9e71",
                },
                {
                  "fontFamily": "NotoKufiArabic",
                },
              ]
            }
          >
            profile.showTips
          </Text>
        </Pressable>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "gap": 8,
              "marginBottom": 16,
              "padding": 16,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Pressable
          accessibilityLabel="profile.logout"
          accessibilityRole="button"
          onClick={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "marginTop": 8,
                "padding": 12,
              },
              {
                "backgroundColor": "#fee2e2",
              },
            ]
          }
          testID="logout-button"
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Manrope-SemiBold",
                  "fontSize": 16,
                },
                {
                  "color": "#991b1b",
                },
                {
                  "fontFamily": "NotoKufiArabic",
                },
              ]
            }
          >
            profile.logout
          </Text>
        </Pressable>
      </View>
    </View>
  </View>
  <View
    pointerEvents="none"
    style={
      [
        {
          "borderBottomWidth": 1,
          "height": 52,
          "justifyContent": "center",
          "left": 0,
          "paddingHorizontal": 16,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#ffffff",
          "borderBottomColor": "#eef1f5",
          "opacity": Value {
            "_value": 0,
          },
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Manrope-Bold",
            "fontSize": 16,
          },
          {
            "color": "#141c28",
            "textAlign": "left",
          },
          false,
        ]
      }
    >
      tabs.profile
    </Text>
  </View>
</SafeAreaView>
`;
